<resources>
    <string name="DIC_ACCEPT">DIC_ACCEPT</string>
    <string name="DIC_ACTION_DOWNLOAD_RESUME">DIC_ACTION_DOWNLOAD_RESUME</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_EPISODE_FAVORITE">DIC_ACTION_MENU_ACTION_ADD_EPISODE_FAVORITE</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_EPISODE_FAVORITE_SUCCESS">DIC_ACTION_MENU_ACTION_ADD_EPISODE_FAVORITE_SUCCESS</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_FAVORITE_CHANNEL">DIC_ACTION_MENU_ACTION_ADD_FAVORITE_CHANNEL</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_FAVORITE_CHANNEL_THROUGH_EVENT">DIC_ACTION_MENU_ACTION_ADD_FAVORITE_CHANNEL_THROUGH_EVENT</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_SERIES_FAVORITE">DIC_ACTION_MENU_ACTION_ADD_SERIES_FAVORITE</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_SERIES_FAVORITE_SUCCESS">DIC_ACTION_MENU_ACTION_ADD_SERIES_FAVORITE_SUCCESS</string>
    <string name="DIC_ACTION_MENU_ACTION_ADD_VOD_FAVORITE">DIC_ACTION_MENU_ACTION_ADD_VOD_FAVORITE</string>
    <string name="DIC_ACTION_MENU_ACTION_CANCEL_ALL_EPISODES">DIC_ACTION_MENU_ACTION_CANCEL_ALL_EPISODES</string>
    <string name="DIC_ACTION_MENU_ACTION_CANCEL_BOOKING">DIC_ACTION_MENU_ACTION_CANCEL_BOOKING</string>
    <string name="DIC_ACTION_MENU_ACTION_CANCEL_BOOKING_FAIL">DIC_ACTION_MENU_ACTION_CANCEL_BOOKING_FAIL</string>
    <string name="DIC_ACTION_MENU_ACTION_CANCEL_EPISODE_BOOKING">DIC_ACTION_MENU_ACTION_CANCEL_EPISODE_BOOKING</string>
    <string name="DIC_ACTION_MENU_ACTION_CANCEL_SEASON_BOOKING">DIC_ACTION_MENU_ACTION_CANCEL_SEASON_BOOKING</string>
    <string name="DIC_ACTION_MENU_ACTION_DELETE_EPISODE_RECORDING">DIC_ACTION_MENU_ACTION_DELETE_EPISODE_RECORDING</string>
    <string name="DIC_ACTION_MENU_ACTION_DELETE_RECORDING">DIC_ACTION_MENU_ACTION_DELETE_RECORDING</string>
    <string name="DIC_ACTION_MENU_ACTION_DELETE_RECORDING_FAIL">DIC_ACTION_MENU_ACTION_DELETE_RECORDING_FAIL</string>
    <string name="DIC_ACTION_MENU_ACTION_DELETE_RECORDING_SUCCESS">DIC_ACTION_MENU_ACTION_DELETE_RECORDING_SUCCESS</string>
    <string name="DIC_ACTION_MENU_ACTION_PLAY">DIC_ACTION_MENU_ACTION_PLAY</string>
    <string name="DIC_ACTION_MENU_ACTION_RECORD">DIC_ACTION_MENU_ACTION_RECORD</string>
    <string name="DIC_ACTION_MENU_ACTION_RECORDING_CANCELLED">DIC_ACTION_MENU_ACTION_RECORDING_CANCELLED</string>
    <string name="DIC_ACTION_MENU_ACTION_RECORD_ALL_EPISODES">DIC_ACTION_MENU_ACTION_RECORD_ALL_EPISODES</string>
    <string name="DIC_ACTION_MENU_ACTION_RECORD_THIS_EPISODE">DIC_ACTION_MENU_ACTION_RECORD_THIS_EPISODE</string>
    <string name="DIC_ACTION_MENU_ACTION_RECORD_THIS_SEASON">DIC_ACTION_MENU_ACTION_RECORD_THIS_SEASON</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_EPISODE_FAVORITE">DIC_ACTION_MENU_ACTION_REMOVE_EPISODE_FAVORITE</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_EPISODE_FAVORITE_SUCCESS">DIC_ACTION_MENU_ACTION_REMOVE_EPISODE_FAVORITE_SUCCESS</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_FAVORITE_CHANNEL">DIC_ACTION_MENU_ACTION_REMOVE_FAVORITE_CHANNEL</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_FAVORITE_CHANNEL_THROUGH_EVENT">DIC_ACTION_MENU_ACTION_REMOVE_FAVORITE_CHANNEL_THROUGH_EVENT</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_SERIES_FAVORITE">DIC_ACTION_MENU_ACTION_REMOVE_SERIES_FAVORITE</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_SERIES_FAVORITE_SUCCESS">DIC_ACTION_MENU_ACTION_REMOVE_SERIES_FAVORITE_SUCCESS</string>
    <string name="DIC_ACTION_MENU_ACTION_REMOVE_VOD_FAVORITE">DIC_ACTION_MENU_ACTION_REMOVE_VOD_FAVORITE</string>
    <string name="DIC_ACTION_MENU_ACTION_RENT">DIC_ACTION_MENU_ACTION_RENT</string>
    <string name="DIC_ACTION_MENU_ACTION_RENT_BUNDLE">DIC_ACTION_MENU_ACTION_RENT_BUNDLE</string>
    <string name="DIC_ACTION_MENU_ACTION_RENT_SVOD">DIC_ACTION_MENU_ACTION_RENT_SVOD</string>
    <string name="DIC_ACTION_MENU_ACTION_RESTART">DIC_ACTION_MENU_ACTION_RESTART</string>
    <string name="DIC_ACTION_MENU_ACTION_RESTART_BACK_TO_LIVE">DIC_ACTION_MENU_ACTION_RESTART_BACK_TO_LIVE</string>
    <string name="DIC_ACTION_MENU_ACTION_RESTART_LIVE">DIC_ACTION_MENU_ACTION_RESTART_LIVE</string>
    <string name="DIC_ACTION_MENU_ACTION_RESUME">DIC_ACTION_MENU_ACTION_RESUME</string>
    <string name="DIC_ACTION_MENU_ACTION_SOCIAL_SHARING">DIC_ACTION_MENU_ACTION_SOCIAL_SHARING</string>
    <string name="DIC_ACTION_MENU_ACTION_STOP_RECORDING">DIC_ACTION_MENU_ACTION_STOP_RECORDING</string>
    <string name="DIC_ACTION_MENU_ACTION_STOP_RECORDING_FAIL">DIC_ACTION_MENU_ACTION_STOP_RECORDING_FAIL</string>
    <string name="DIC_ACTION_MENU_ACTION_STOP_RECORDING_SUCCESS">DIC_ACTION_MENU_ACTION_STOP_RECORDING_SUCCESS</string>
    <string name="DIC_ACTION_MENU_ACTION_SWITCH_LIVE">DIC_ACTION_MENU_ACTION_SWITCH_LIVE</string>
    <string name="DIC_ACTION_MENU_ACTION_TRAILER">DIC_ACTION_MENU_ACTION_TRAILER</string>
    <string name="DIC_ACTION_MENU_ACTION_UNLOCK">DIC_ACTION_MENU_ACTION_UNLOCK</string>
    <string name="DIC_ACTION_MENU_ACTION_UNSUBSCRIBED_ASSET_TITLE">DIC_ACTION_MENU_ACTION_UNSUBSCRIBED_ASSET_TITLE</string>
    <string name="DIC_ACTION_MENU_ACTION_UNSUBSCRIBED_CHANNEL_TITLE">DIC_ACTION_MENU_ACTION_UNSUBSCRIBED_CHANNEL_TITLE</string>
    <string name="DIC_ACTION_MENU_ACTION_WATCHLIST">DIC_ACTION_MENU_ACTION_WATCHLIST</string>
    <string name="DIC_ACTION_MENU_ACTION_WATCH_TRAILER">DIC_ACTION_MENU_ACTION_WATCH_TRAILER</string>
    <string name="DIC_ACTION_MENU_ACTORS">DIC_ACTION_MENU_ACTORS</string>
    <string name="DIC_ACTION_MENU_AUDIOS">DIC_ACTION_MENU_AUDIOS</string>
    <string name="DIC_ACTION_MENU_BOXSET_CONTENTS">DIC_ACTION_MENU_BOXSET_CONTENTS</string>
    <string name="DIC_ACTION_MENU_CAST">DIC_ACTION_MENU_CAST</string>
    <string name="DIC_ACTION_MENU_CONTENT_NOT_ENTITLED">DIC_ACTION_MENU_CONTENT_NOT_ENTITLED</string>
    <string name="DIC_ACTION_MENU_CONTENT_NOT_ENTITLED_STANDALONE">DIC_ACTION_MENU_CONTENT_NOT_ENTITLED_STANDALONE</string>
    <string name="DIC_ACTION_MENU_CONTINUE">DIC_ACTION_MENU_CONTINUE</string>
    <string name="DIC_ACTION_MENU_DIRECTOR">DIC_ACTION_MENU_DIRECTOR</string>
    <string name="DIC_ACTION_MENU_DIRECTORS">DIC_ACTION_MENU_DIRECTORS</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD">DIC_ACTION_MENU_DOWNLOAD</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_CANCEL">DIC_ACTION_MENU_DOWNLOAD_CANCEL</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_COMPLETE">DIC_ACTION_MENU_DOWNLOAD_COMPLETE</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_DELETE">DIC_ACTION_MENU_DOWNLOAD_DELETE</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_FAILED">DIC_ACTION_MENU_DOWNLOAD_FAILED</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_PAUSE">DIC_ACTION_MENU_DOWNLOAD_PAUSE</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_PROFILE_QUEUE_MESSAGE">DIC_ACTION_MENU_DOWNLOAD_PROFILE_QUEUE_MESSAGE</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_QUEUED">DIC_ACTION_MENU_DOWNLOAD_QUEUED</string>
    <string name="DIC_ACTION_MENU_DOWNLOAD_RESUME">DIC_ACTION_MENU_DOWNLOAD_RESUME</string>
    <string name="DIC_ACTION_MENU_DURATION">DIC_ACTION_MENU_DURATION</string>
    <string name="DIC_ACTION_MENU_EPISODES">DIC_ACTION_MENU_EPISODES</string>
    <string name="DIC_ACTION_MENU_EVENT_EXPIRED_ALERT_MESSAGE">DIC_ACTION_MENU_EVENT_EXPIRED_ALERT_MESSAGE</string>
    <string name="DIC_ACTION_MENU_GENRES">DIC_ACTION_MENU_GENRES</string>
    <string name="DIC_ACTION_MENU_INFORMATION">DIC_ACTION_MENU_INFORMATION</string>
    <string name="DIC_ACTION_MENU_LANGUAGES">DIC_ACTION_MENU_LANGUAGES</string>
    <string name="DIC_GUIDE_CHANNELS">DIC_GUIDE_CHANNELS</string>
    <string name="DIC_GUIDE_FILTER_APPLY">DIC_GUIDE_FILTER_APPLY</string>
    <string name="DIC_GUIDE_FILTER_DATE">DIC_GUIDE_FILTER_DATE</string>
    <string name="DIC_GUIDE_FILTER_RESET">DIC_GUIDE_FILTER_RESET</string>
    <string name="DIC_GUIDE_FILTER_TIME">DIC_GUIDE_FILTER_TIME</string>
    <string name="pref_app_client_authentication_params" />
    <string name="pref_app_client_authentication_type">session_guard</string>
    <string name="pref_app_default_language">en</string>
    <string name="pref_app_network_avalability_check_host">https://www.google.com</string>
    <string name="pref_app_server_base_url" />
    <string name="pref_app_server_version">r1.6.0</string>
    <string name="pref_app_server_xmpp_jid">dmp_0.xmpp.cisco.com</string>
    <string name="pref_app_service_discovery_params">https://csds-astro.astro.com.my</string>
    <string name="pref_app_service_discovery_type">csds</string>
    <string name="pref_app_subtitle_type">smptett</string>
    <string name="pref_app_user_sign_in_params" />
    <string name="pref_app_user_sign_in_type">oauth</string>
    <string name="pref_milestones_port">8080</string>
    <string name="pref_name_app_OMD_Server_url">pref_app_OMD_server_url_display_images_playback</string>
    <string name="pref_name_app_base_url_display_playback_images">pref_app_server_base_url_display_images_playback</string>
    <string name="pref_name_app_clear_content_playback_url">pref_app_clear_content_playback_url</string>
    <string name="pref_name_app_client_authentication_params">pref_app_client_authentication_params</string>
    <string name="pref_name_app_client_authentication_type">pref_app_client_authentication_type</string>
    <string name="pref_name_app_default_language">pref_app_default_language</string>
    <string name="pref_name_app_disable_remote_ui">pref_name_app_disable_remote_ui</string>
    <string name="pref_name_app_enable_OMD_Server">pref_name_app_enable_OMD_Server</string>
    <string name="pref_name_app_enable_emergency_alert_system">pref_app_enable_emergency_alert_system</string>
    <string name="pref_name_app_logging_use_file_logger">pref_app_logging_use_file_logger</string>
    <string name="pref_name_app_network_avalability_check_host">pref_app_network_avalability_check_host</string>
    <string name="pref_name_app_server_base_url">pref_app_server_base_url</string>
    <string name="pref_name_app_server_version">pref_app_server_version</string>
    <string name="pref_name_app_server_xmpp_jid">pref_app_server_xmpp_jid</string>
    <string name="pref_name_app_service_discovery_params">pref_app_service_discovery_params</string>
    <string name="pref_name_app_service_discovery_type">pref_app_service_discovery_type</string>
    <string name="pref_name_app_subtitle_type">pref_app_subtitle_type</string>
    <string name="pref_name_app_use_version_check">pref_app_use_version_check</string>
    <string name="pref_name_app_user_sign_in_params">pref_app_user_sign_in_params</string>
    <string name="pref_name_app_user_sign_in_type">pref_app_user_sign_in_type</string>
    <string name="pref_name_milestones_enabled">pref_milestones_enabled</string>
    <string name="pref_name_milestones_port">pref_milestones_port</string>
    <string name="pref_name_token_generator_host">pref_token_generator_host</string>
    <string name="pref_name_token_generator_path">pref_token_generator_path</string>
    <string name="pref_name_token_generator_port">pref_token_generator_port</string>
    <string name="pref_name_use_dummy_data">pref_use_dummy_data</string>
    <string name="pref_name_use_dummy_data_for_media">pref_use_dummy_data_for_media</string>
    <string name="pref_name_use_dummy_data_for_missing_api">pref_use_dummy_data_for_missing_api</string>
    <string name="pref_name_use_dummy_media_provider">pref_use_dummy_media_provider</string>
    <string name="pref_name_use_dummy_registration">pref_use_dummy_registration</string>
    <string name="pref_name_version_check_server_base_url">pref_version_check_server_base_url</string>
    <string name="pref_token_generator_host">192.118.34.18</string>
    <string name="pref_token_generator_path">/tokenGen/activation</string>
    <string name="pref_token_generator_port">6451</string>
    <string name="pref_version_check_server_base_url">https://csds-astro.astro.com.my</string>
</resources>