<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="App Settings">
        <CheckBoxPreference
            android:title="Enable EmergencyAlertSystem (EAS)"
            android:key="@string/pref_name_app_enable_emergency_alert_system"
            android:summary="Enable EmergencyAlertSystem (EAS)"
            android:defaultValue="@bool/pref_app_enable_emergency_alert_system"/>
        <CheckBoxPreference
            android:title="use version check"
            android:key="@string/pref_name_app_use_version_check"
            android:summary="use version check"
            android:defaultValue="@bool/pref_app_use_version_check"/>
        <CheckBoxPreference
            android:title="save logs to file"
            android:key="@string/pref_name_app_logging_use_file_logger"
            android:summary="save logs to file"
            android:defaultValue="@bool/pref_app_logging_use_file_logger"/>
        <EditTextPreference
            android:title="Default Language"
            android:key="@string/pref_name_app_default_language"
            android:summary="Default Language"
            android:defaultValue="@string/pref_app_default_language"
            android:dialogTitle="Default Language"/>
        <ListPreference
            android:entries="@array/subtitle_type"
            android:title="Subtitle Type"
            android:key="@string/pref_name_app_subtitle_type"
            android:summary="Subtitle Type"
            android:defaultValue="@string/pref_app_subtitle_type"
            android:entryValues="@array/subtitle_type"/>
        <ListPreference
            android:entries="@array/service_discovery_type"
            android:title="Create Service Discovery type"
            android:key="@string/pref_name_app_service_discovery_type"
            android:summary="Create Service Discovery type"
            android:defaultValue="@string/pref_app_service_discovery_type"
            android:entryValues="@array/service_discovery_type"/>
        <EditTextPreference
            android:title="Service Discovery params"
            android:key="@string/pref_name_app_service_discovery_params"
            android:summary="Service Discovery params"
            android:defaultValue="@string/pref_app_service_discovery_params"
            android:dialogTitle="Service Discovery params"/>
        <ListPreference
            android:entries="@array/user_sign_in_type"
            android:title="Select User Sign-In type"
            android:key="@string/pref_name_app_user_sign_in_type"
            android:summary="Select User Sign-In type"
            android:defaultValue="@string/pref_app_user_sign_in_type"
            android:entryValues="@array/user_sign_in_type"/>
        <EditTextPreference
            android:title="User Sign-In params"
            android:key="@string/pref_name_app_user_sign_in_params"
            android:summary="User Sign-In params"
            android:defaultValue="@string/pref_app_user_sign_in_params"
            android:dialogTitle="User Sign-In params"/>
        <ListPreference
            android:entries="@array/client_authentication_type"
            android:title="Select Client Authentication type"
            android:key="@string/pref_name_app_client_authentication_type"
            android:summary="Select Client Authentication type"
            android:defaultValue="@string/pref_app_client_authentication_type"
            android:entryValues="@array/client_authentication_type"/>
        <EditTextPreference
            android:title="Client Authentication params"
            android:key="@string/pref_name_app_client_authentication_params"
            android:summary="Client Authentication params"
            android:defaultValue="@string/pref_app_client_authentication_params"
            android:dialogTitle="Client Authentication params"/>
        <EditTextPreference
            android:title="AppServer version"
            android:key="@string/pref_name_app_server_version"
            android:summary="AppServer version"
            android:defaultValue="@string/pref_app_server_version"
            android:dialogTitle="AppServer version"/>
        <EditTextPreference
            android:title="AppServer base URL"
            android:key="@string/pref_name_app_server_base_url"
            android:summary="AppServer base URL"
            android:defaultValue="@string/pref_app_server_base_url"
            android:dialogTitle="AppServer base URL"/>
        <EditTextPreference
            android:title="AppServer XMPP JID"
            android:key="@string/pref_name_app_server_xmpp_jid"
            android:summary="AppServer XMPP JID"
            android:defaultValue="@string/pref_app_server_xmpp_jid"
            android:dialogTitle="AppServer XMPP JID"/>
        <EditTextPreference
            android:title="Version Check Server"
            android:key="@string/pref_name_version_check_server_base_url"
            android:summary="Version Check Server"
            android:defaultValue="@string/pref_version_check_server_base_url"
            android:dialogTitle="Server"/>
        <EditTextPreference
            android:title="Network Availability Check Host"
            android:key="@string/pref_name_app_network_avalability_check_host"
            android:summary="Network Availability Check Host"
            android:defaultValue="@string/pref_app_network_avalability_check_host"
            android:dialogTitle="Network Availability Check Host"/>
        <EditTextPreference
            android:title="TokenGenerator host"
            android:key="@string/pref_name_token_generator_host"
            android:summary="TokenGenerator host"
            android:defaultValue="@string/pref_token_generator_host"
            android:dialogTitle="TokenGenerator host"/>
        <EditTextPreference
            android:title="TokenGenerator port"
            android:key="@string/pref_name_token_generator_port"
            android:summary="TokenGenerator port"
            android:defaultValue="@string/pref_token_generator_port"
            android:dialogTitle="TokenGenerator port"/>
        <EditTextPreference
            android:title="TokenGenerator Path (for Activation)"
            android:key="@string/pref_name_token_generator_path"
            android:summary="TokenGenerator Path (for Activation)"
            android:defaultValue="@string/pref_token_generator_path"
            android:dialogTitle="TokenGenerator Path (for Activation)"/>
        <CheckBoxPreference
            android:title="Disable Remote UI"
            android:key="@string/pref_name_app_disable_remote_ui"
            android:summary="If checked disable loading UI from remote"
            android:defaultValue="@bool/pref_app_quirks_disable_remote_ui_config"/>
        <CheckBoxPreference
            android:title="Display Image and play the video from OMD server"
            android:key="@string/pref_name_app_enable_OMD_Server"
            android:summary="If checked enable OMD Server"
            android:defaultValue="@bool/pref_name_app_enable_OMD_Server"/>
        <EditTextPreference
            android:title="Base url to display Playback and image"
            android:key="@string/pref_name_app_base_url_display_playback_images"
            android:summary="Base url to display Playback and image"
            android:dialogTitle="Base url to display Playback and image"/>
        <EditTextPreference
            android:title="OMD Server url to display Playback and image"
            android:key="@string/pref_name_app_OMD_Server_url"
            android:summary="OMD Server url to display Playback and image"
            android:dialogTitle="OMD Server url to display Playback and image"/>
        <EditTextPreference
            android:title="Clear Content Playback url"
            android:key="@string/pref_name_app_clear_content_playback_url"
            android:summary="Clear Content Playback url"
            android:dialogTitle="Clear Content Playback url"/>
    </PreferenceCategory>
</PreferenceScreen>
