<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="App Settings">
        <CheckBoxPreference
            android:title="use dummy data"
            android:key="@string/pref_name_use_dummy_data"
            android:summary="use dummy data"
            android:defaultValue="@bool/pref_use_dummy_data"/>
        <CheckBoxPreference
            android:title="use dummy data for missing api"
            android:key="@string/pref_name_use_dummy_data_for_missing_api"
            android:summary="use dummy data for missing api"
            android:defaultValue="@bool/pref_use_dummy_data_for_missing_api"/>
        <CheckBoxPreference
            android:title="use dummy data for media"
            android:key="@string/pref_name_use_dummy_data_for_media"
            android:summary="use dummy data for media"
            android:defaultValue="@bool/pref_use_dummy_data_for_media"/>
        <CheckBoxPreference
            android:title="use dummy registration"
            android:key="@string/pref_name_use_dummy_registration"
            android:summary="use dummy registration"
            android:defaultValue="@bool/pref_use_dummy_registration"/>
        <CheckBoxPreference
            android:title="use dummy media provider"
            android:key="@string/pref_name_use_dummy_media_provider"
            android:summary="use dummy media provider"
            android:defaultValue="@bool/pref_use_dummy_media_provider"/>
        <CheckBoxPreference
            android:title="Milestones enabled"
            android:key="@string/pref_name_milestones_enabled"
            android:summary="Milestones enabled"
            android:defaultValue="@bool/pref_milestones_enabled"/>
        <EditTextPreference
            android:title="Milestones Server port"
            android:key="@string/pref_name_milestones_port"
            android:summary="Milestones Server port"
            android:defaultValue="@string/pref_milestones_port"
            android:dialogTitle="Milestones Server port"/>
    </PreferenceCategory>
</PreferenceScreen>
