<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tv_guide_filter_widget"
    android:background="#e6000000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/tv_guide_filter_widget_close_icon"
            android:background="@drawable/tv_guide_filter_widget_close_icon"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="5dp"
            android:layout_alignParentEnd="true"/>
        <FrameLayout
            android:background="@drawable/tv_guide_filter_widget_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_guide_filter_widget_close_icon"/>
        <RelativeLayout
            android:id="@+id/tv_guide_filter_widget_tab_container"
            android:background="@drawable/tv_guide_filter_widget_tabs_selector"
            android:padding="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/tv_guide_filter_widget_close_icon"
            android:layout_centerInParent="true">
            <com.cisco.veop.client.widgets.guide.composites.vertical.ComponentVerticalGuideFilterButton
                android:textSize="17sp"
                android:gravity="center"
                android:id="@+id/tv_guide_filter_tab_channels"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_width="119dp"
                android:layout_height="42dp"
                app:kbottomLeftRadius="25dp"
                app:kbuttonType="ghost"
                app:kstroke="false"
                app:ktext="@string/DIC_GUIDE_CHANNELS"
                app:ktopLeftRadius="25dp"/>
            <View
                android:id="@+id/tv_guide_filter_tab_line_separator_one"
                android:background="@color/tv_guide_filter_button_stroke_color"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_toEndOf="@+id/tv_guide_filter_tab_channels"/>
            <com.cisco.veop.client.widgets.guide.composites.vertical.ComponentVerticalGuideFilterButton
                android:textSize="17sp"
                android:gravity="center"
                android:id="@+id/tv_guide_filter_tab_date"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_width="119dp"
                android:layout_height="42dp"
                android:layout_toEndOf="@+id/tv_guide_filter_tab_line_separator_one"
                app:kbuttonType="ghost"
                app:kstroke="false"
                app:ktext="@string/DIC_GUIDE_FILTER_DATE"/>
            <View
                android:id="@+id/tv_guide_filter_tab_line_separator_two"
                android:background="@color/tv_guide_filter_button_stroke_color"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_toEndOf="@+id/tv_guide_filter_tab_date"/>
            <com.cisco.veop.client.widgets.guide.composites.vertical.ComponentVerticalGuideFilterButton
                android:textSize="17sp"
                android:gravity="center"
                android:id="@+id/tv_guide_filter_tab_time"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_width="119dp"
                android:layout_height="42dp"
                android:layout_toEndOf="@+id/tv_guide_filter_tab_line_separator_two"
                app:kbottomRightRadius="25dp"
                app:kbuttonType="ghost"
                app:kstroke="false"
                app:ktext="@string/DIC_GUIDE_FILTER_TIME"
                app:ktopRightRadius="25dp"/>
        </RelativeLayout>
        <ViewFlipper
            android:id="@+id/tv_guide_filter_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_guide_filter_widget_bottom_container"
            android:layout_below="@+id/tv_guide_filter_widget_tab_container"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <GridView
                android:id="@+id/tv_guide_filter_channels_grid"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:descendantFocusability="beforeDescendants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:horizontalSpacing="6dp"
                android:verticalSpacing="6dp"
                android:numColumns="3"/>
            <DatePicker
                android:id="@+id/tv_guide_filter_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:startYear="1900"
                android:endYear="2100"
                android:calendarViewShown="false"/>
            <com.cisco.veop.client.widgets.guide.composites.tv.TVGuideFilterTimePicker
                android:id="@+id/tv_guide_filter_time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:timePickerMode="spinner"/>
        </ViewFlipper>
        <RelativeLayout
            android:id="@+id/tv_guide_filter_widget_bottom_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <com.cisco.veop.client.widgets.guide.composites.vertical.ComponentVerticalGuideFilterButton
                android:textSize="17sp"
                android:gravity="center"
                android:id="@+id/tv_guide_filter_button_apply"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_width="186dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                app:kbuttonType="normal"
                app:ktext="@string/DIC_GUIDE_FILTER_APPLY"/>
            <com.cisco.veop.client.widgets.guide.composites.vertical.ComponentVerticalGuideFilterButton
                android:textSize="17sp"
                android:gravity="center"
                android:id="@+id/tv_guide_filter_button_cancel"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_width="186dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_toEndOf="@+id/tv_guide_filter_button_apply"
                app:kbuttonType="normal"
                app:ktext="@string/DIC_GUIDE_FILTER_RESET"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
